<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.ApplicationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchGameConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.SearchGameActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        <TextView
            android:id="@+id/addGameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/search_game"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/gameNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/game_name"
            app:layout_constraintStart_toStartOf="@+id/gameNameField"
            app:layout_constraintTop_toBottomOf="@+id/addGameText" />

        <EditText
            android:id="@+id/gameNameField"
            style="@style/EditTextAddGame"
            android:ems="10"
            android:hint="@string/enter_the_game_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameNameTextView"
            tools:ignore="Autofill,LabelFor"/>

        <TextView
            android:id="@+id/gameTypLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/game_type"
            app:layout_constraintStart_toStartOf="@+id/gameNameField"
            app:layout_constraintTop_toBottomOf="@+id/gameNameField" />


        <LinearLayout
            android:id="@+id/typeOfGameField"
            android:layout_width="290dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameTypLabel">

        </LinearLayout>


        <TextView
            android:id="@+id/minNumberOfPlayersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/min_number_of_players"
            app:layout_constraintStart_toStartOf="@+id/typeOfGameField"
            app:layout_constraintTop_toBottomOf="@+id/chooseDateField" />

        <EditText
            android:id="@+id/minNumberOfPlayersField"
            style="@style/EditTextAddGame"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minNumberOfPlayersLabel"
            tools:ignore="Autofill,LabelFor"/>

        <TextView
            android:id="@+id/maxNumberOfPlayersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/max_number_of_players"
            app:layout_constraintStart_toStartOf="@+id/minNumberOfPlayersField"
            app:layout_constraintTop_toBottomOf="@+id/minNumberOfPlayersField" />


        <EditText
            android:id="@+id/maxNumberOfPlayersField"
            style="@style/EditTextAddGame"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxNumberOfPlayersLabel"
            tools:ignore="Autofill,LabelFor"/>

        <TextView
            android:id="@+id/localizationLabel"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:text="@string/localization"
            app:layout_constraintStart_toStartOf="@+id/maxNumberOfPlayersField"
            app:layout_constraintTop_toBottomOf="@+id/typeOfGameField" />

        <Button
            android:id="@+id/searchLocalizationButton"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#FF7F00"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_localization"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/localizationLabel" />

        <TextView
            android:id="@+id/gamePubLabel"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:text="@string/game_pub"
            app:layout_constraintStart_toStartOf="@+id/maxNumberOfPlayersField"
            app:layout_constraintTop_toBottomOf="@+id/localizationRangeEditText" />

        <RadioGroup
            android:id="@+id/gameTypeRadioGroupSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/gamePubLabel"
            app:layout_constraintTop_toBottomOf="@+id/gamePubLabel">

            <RadioButton
                android:id="@+id/gameInGamePubRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/accent"
                android:text="@string/want_game_pub" />

            <RadioButton
                android:id="@+id/NOTGamePubRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:buttonTint="@color/accent"
                android:text="@string/dont_want_game_pub" />

            <RadioButton
                android:id="@+id/WhateverRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:buttonTint="@color/accent"
                android:text="@string/whatever" />

        </RadioGroup>

        <TextView
            android:id="@+id/dateFieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/game_date"
            app:layout_constraintStart_toStartOf="@+id/gamePubLabel"
            app:layout_constraintTop_toBottomOf="@+id/gameTypeRadioGroupSearch" />


        <TextView
            android:id="@+id/chooseDateField"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center_horizontal|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/add_game_date"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateFieldLabel" />

        <Button
            android:id="@+id/searchGameButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#FF7F00"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maxNumberOfPlayersField" />
        <TextView
                android:text="@string/range_in_km"
                android:layout_width="155dp"
                android:layout_height="25dp"
                android:id="@+id/localizationRangeLabel"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/searchLocalizationButton"
                app:layout_constraintBottom_toTopOf="@+id/localizationRangeEditText"
                app:layout_constraintStart_toStartOf="@+id/localizationLabel"
                app:layout_constraintVertical_chainStyle="spread_inside"/>
        <EditText
                android:layout_width="227dp"
                android:layout_height="34dp"
                android:inputType="numberSigned"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:id="@+id/localizationRangeEditText" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/gamePubLabel"
                app:layout_constraintTop_toBottomOf="@+id/localizationRangeLabel"
                app:layout_constraintStart_toStartOf="@+id/localizationRangeLabel"
                app:layout_constraintVertical_bias="0.272"
                tools:ignore="Autofill,LabelFor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />


</androidx.drawerlayout.widget.DrawerLayout>