<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        tools:context=".ui.RegisterActivity">

    <ImageView
            android:contentDescription="@string/icon"
            android:id="@+id/imageView"
            android:layout_height="93dp"
            android:layout_width="116dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372"
            app:srcCompat="@drawable/GFIcon"
            />

    <LinearLayout
            android:gravity="center"
            android:id="@+id/linearLayout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.542"
            >

        <EditText
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/nick"
                android:id="@+id/nick"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:paddingBottom="16dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:singleLine="true"
                />

        <EditText
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/email"
                android:id="@+id/emailRegister"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:paddingBottom="16dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:singleLine="true"
                />

        <EditText
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/password"
                android:id="@+id/passwordRegister"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:paddingBottom="16dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:singleLine="true"
                />

        <EditText
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/password_repeat"
                android:id="@+id/passwordRegisterRepeat"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:paddingBottom="16dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:singleLine="true"
                />

        <EditText
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/name"
                android:id="@+id/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:paddingBottom="16dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:singleLine="true"
                />

        <EditText
                android:background="@drawable/rounded_button_outline_thin"
                android:ems="10"
                android:hint="@string/age"
                android:id="@+id/age"
                android:importantForAutofill="no"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:paddingBottom="16dp"
                android:paddingEnd="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingStart="20dp"
                android:paddingTop="16dp"
                android:singleLine="true"
                />

        <ImageButton
                android:background="@android:drawable/toast_frame"
                android:contentDescription="@string/addPhoto"
                android:id="@+id/addPhoto"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/camera_icon"
                />

    </LinearLayout>

    <Button
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/accent"
            android:id="@+id/registerActivityButton"
            android:layout_height="50dp"
            android:layout_width="200dp"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.28"
            />

    <ImageButton
            android:background="@android:drawable/screen_background_light_transparent"
            android:contentDescription="@string/back"
            android:id="@+id/backButton"
            android:layout_height="45dp"
            android:layout_width="45dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="?attr/actionModeCloseDrawable"
            />

</androidx.constraintlayout.widget.ConstraintLayout>
