<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:backgroundTint="@color/background"
        tools:context=".MainActivity">


    <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/logo"
            android:layout_height="200dp"
            android:layout_width="200dp"
            app:layout_constraintBottom_toTopOf="@+id/appNameTmp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.833"
            tools:srcCompat="@drawable/gf_logo"
            />

    <TextView
            android:id="@+id/appNameTmp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#3F3F3F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.464"
            />

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameTmp"
            app:layout_constraintVertical_bias="0.158"
            >

        <Button
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/accent"
                android:id="@+id/loginButton"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:layout_width="200dp"
                android:text="@string/log_in"
                android:textColor="#FFFFFF"
                />

        <Button
                android:background="@drawable/rounded_button_outline_bold"
                android:id="@+id/registerButton"
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:text="@string/sign_in"
                android:textColor="@color/accent"
                />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>